--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>my_portfolio</title>
+  <title>2sh</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
